[package]
name = "dd-trace-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tower-layer = "0.3"
tower-service = "0.3"
axum = "0.7"
reqwest-middleware = "0.3"
async-trait = "0.1"
reqwest = "0.12"
http = "1"

[build-dependencies]
built = "0.7"

[dev-dependencies]
tokio = "1"
